chore: update font

--- a/astro-version/src/styles/globals.css
+++ b/astro-version/src/styles/globals.css
@@ -1,32 +1,70 @@
 @import "tailwindcss";
 
-/* Arial Round Pro - Commercial font with Varela Round as primary fallback */
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round:wght@400&display=swap');
-
-/* Font Face Declarations */
+/* Gotham Rounded Font Faces */
 @font-face {
-  font-family: "Varela Round";
+  font-family: 'Gotham Rounded';
+  src: url('/fonts/gothamrnd_light.otf') format('opentype');
+  font-weight: 300;
   font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gotham Rounded';
+  src: url('/fonts/gothamrnd_lightitalic.otf') format('opentype');
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gotham Rounded';
+  src: url('/fonts/gothamrnd_book.otf') format('opentype');
   font-weight: 400;
+  font-style: normal;
   font-display: swap;
-  src: url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
 }
 
 @font-face {
-  font-family: "Comfortaa";
-  font-style: normal;
-  font-weight: 300 700;
+  font-family: 'Gotham Rounded';
+  src: url('/fonts/gothamrnd_bookitalic.otf') format('opentype');
+  font-weight: 400;
+  font-style: italic;
   font-display: swap;
-  src: url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap");
 }
 
 @font-face {
-  font-family: "Nunito";
+  font-family: 'Gotham Rounded';
+  src: url('/fonts/gothamrnd_medium.otf') format('opentype');
+  font-weight: 500;
   font-style: normal;
-  font-weight: 200 900;
   font-display: swap;
-  src: url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap");
 }
+
+@font-face {
+  font-family: 'Gotham Rounded';
+  src: url('/fonts/gothamrnd_mediumitalic.otf') format('opentype');
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gotham Rounded';
+  src: url('/fonts/gothamrnd_bold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gotham Rounded';
+  src: url('/fonts/gothamrnd_bolditalic.otf') format('opentype');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
 
 /* Tailwind v4 Dark Mode Support */
 @custom-variant dark (&:is(.dark *));
@@ -120,7 +158,8 @@
 
   body {
     @apply bg-background text-foreground;
-    font-family: "Arial Round Pro", "Varela Round", "Comfortaa", "Nunito", Arial, sans-serif;
+    font-family: "Gotham Rounded", sans-serif;
+    font-weight: 500; /* Default to medium weight */
   }
 
   /* Typography System */
