--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,19 +7,27 @@ import Events from "@/components/Events.tsx";
 import Community from "@/components/Community.tsx";
 import Contact from "@/components/Contact.tsx";
 import Footer from "@/components/Footer.tsx";
+import dayjs from "dayjs";
 
 // Fetch all events and sort by date
 const allEvents = await getCollection("events");
-const upcomingEvents = allEvents.sort(
-    (a, b) => new Date(a.data.date).getTime() - new Date(b.data.date).getTime(),
-);
+
+const now = dayjs();
+
+const upcomingEvents = allEvents
+    .filter((event) => dayjs(event.data.date).isAfter(now))
+    .sort((a, b) => dayjs(a.data.date).diff(b.data.date));
+
+const pastEvents = allEvents
+    .filter((event) => dayjs(event.data.date).isBefore(now))
+    .sort((a, b) => dayjs(b.data.date).diff(a.data.date));
 ---
 
 <Layout title="Siligong Gamedev - Wollongong Game Development Community">
     <div class="min-h-screen">
         <Hero />
         <About />
-        <Events client:load events={upcomingEvents} />
+        <Events client:load upcoming={upcomingEvents} past={pastEvents} />
         <Community />
         <Contact />
         <Footer />
